test_programs/compile_failure/noirc_frontend_tests_unused_items_does_not_consider_struct_as_constructed_if_mentioned_in_function_argument/src/main.nr

    struct Bar {}

    fn foo(_: [Bar; 1]) {}

    fn main() {
        foo();
    }
    